public interface ChoreFilter {
    boolean matches(Chore chore);
}
