import java.util.List;

public interface ChoresAssignmentTemplate {
    String assign(Chore chore, List<User> members);
}
