public class HouseholdForm {
    private String name;
    private String description;

    public HouseholdForm() { }

    public void promptDetails() { }
    public boolean validateInput() { return true; }
    public Household submit() { return null; }
}
