public class MainScreen {
    private User currentUser;

    public MainScreen(User user) {
        this.currentUser = user;
    }

    public void displayOptions() {}
    public void createHousehold() {}
    public void joinHousehold() {}
    public void openHousehold() {}
    public void generateReport() {}
    public void logout() {}
}
