public class ReportDialog {
    private String startDate;
    private String endDate;

    public ReportDialog() { }

    public void promptDateRange() { }
    public boolean validateDates() { return true; }
    public boolean confirmGeneration() { return true; }
}
