public class WelcomeScreen {
    public void displayWelcome() {}
    public void promptAuthentication() {}
    public void navigateToLogin() {}
    public void navigateToSignUp() {}
}
