@startuml


package "presentation" {

  class WelcomeScreen {
    + displayWelcome(): void
    + promptAuthentication(): void
    + navigateToLogin(): void
    + navigateToSignUp(): void
  }

  class MainScreen {
    - currentUser: User
    + MainScreen(user: User)
    + displayOptions(): void
    + createHousehold(): void
    + joinHousehold(): void
    + openHousehold(): void
    + generateReport(): void
    + logout(): void
  }

  class HouseholdDashboard {
    - household: Household
    - currentUser: User
    + HouseholdDashboard(household: Household, user: User)
    + displayMembers(): void
    + displayChores(): void
    + displayActiveChores(): void
    + displayCompletedChores(): void
    + addChore(): void
    + markChoreComplete(choreId: String): void
    + removeChore(choreId: String): void
  }

  class ChoreForm {
    - description: String
    - priority: String
    - type: String
    - assignmentType: String
    + ChoreForm()
    + promptDetails(): void
    + validateInput(): boolean
    + submit(): Chore
    + selectPriority(): String
    + selectType(): String
    + selectAssignment(): String
  }

  class HouseholdForm {
    - name: String
    - description: String
    + HouseholdForm()
    + promptDetails(): void
    + validateInput(): boolean
    + submit(): Household
  }

  class ReportDialog {
    - startDate: String
    - endDate: String
    + ReportDialog()
    + promptDateRange(): void
    + validateDates(): boolean
    + confirmGeneration(): boolean
  }
}

package "domain" {

  class User {
    - email: String
    - password: String
    - name: String
    - householdIds: List<String>
    + User(email: String, password: String, name: String)
    + getEmail(): String
    + getName(): String
    + getPassword(): String
    + getHouseholdIds(): List<String>
    + addHouseholdId(householdId: String): void
    + setPassword(password: String): void
  }

  class Household {
    - id: String
    - name: String
    - description: String
    - joinCode: String
    - memberEmails: List<String>
    - chores: List<Chore>
    - ownerEmail: String
    + Household(id: String, name: String, description: String)
    + generateJoinCode(): String
    + addMember(userEmail: String): void
    + removeMember(userEmail: String): void
    + addChore(chore: Chore): void
    + removeChore(choreId: String): void
    + getMembers(): List<User>
    + getChores(): List<Chore>
    + getFilteredChores(filter: ChoreFilter): List<Chore>
    + getActiveChores(): List<Chore>
    + getCompletedChores(): List<Chore>
  }

  class Chore {
    - id: String
    - description: String
    - priority: String
    - type: String
    - assignedTo: String
    - completed: boolean
    - completionDate: String
    - assignmentStrategy: ChoresAssignmentTemplate
    + Chore(id: String, description: String)
    + markAsComplete(): void
    + assignTo(userEmail: String): void
    + setAssignmentStrategy(strategy: ChoresAssignmentTemplate): void
    + performAssignment(members: List<User>): void
    + isCompleted(): boolean
    + getAssignedUser(): User
    + getId(): String
    + getDescription(): String
    + getPriority(): String
    + getAssignedTo(): String
    + getCompletionDate(): String
  }

  interface ChoresAssignmentTemplate {
    + assign(chore: Chore, members: List<User>): String
  }

  class RandomAssignmentStrategy {
    + assign(chore: Chore, members: List<User>): String
  }

  class ManualAssignmentStrategy {
    - selectedUserEmail: String
    + ManualAssignmentStrategy(userEmail: String)
    + assign(chore: Chore, members: List<User>): String
  }

  interface ChoreFilter {
    + matches(chore: Chore): boolean
  }

  class CompletedChoreFilter {
    + matches(chore: Chore): boolean
  }

  class ActiveChoreFilter {
    + matches(chore: Chore): boolean
  }

  class DateRangeChoreFilter {
    - startDate: String
    - endDate: String
    + DateRangeChoreFilter(startDate: String, endDate: String)
    + matches(chore: Chore): boolean
  }

  class AuthenticationManager {
    - userRepository: UserBaseInterface
    + AuthenticationManager(userRepository: UserBaseInterface)
    + authenticate(email: String, password: String): User
    + signUp(email: String, password: String, name: String): User
    + validateCredentials(email: String, password: String): boolean
    - hashPassword(password: String): String
    - verifyPassword(plainPassword: String, hashedPassword: String): boolean
  }

  class Credentials {
    - email: String
    - password: String
    + Credentials(email: String, password: String)
    + validate(): boolean
    + getEmail(): String
    + getPassword(): String
  }

  class Application {
    - userRepository: UserBaseInterface
    - householdRepository: HouseholdsInterface
    - choreRepository: ChoreInterface
    - authenticationManager: AuthenticationManager
    - reportService: ReportService
    - users: Map<String, User>
    - households: Map<String, Household>
    - currentUser: User
    + Application()
    + startApp(): void
    + loadData(): void
    + saveData(): void
    + createHousehold(name: String, description: String, owner: User): Household
    + joinHousehold(joinCode: String, user: User): Household
    + findHouseholdByJoinCode(joinCode: String): Household
    + generateReport(startDate: String, endDate: String): String
    + readNonEmpty(prompt: String): String
    + readEnum(prompt: String, allowed: String[]): String
    + readIntInRange(prompt: String, min: int, max: int): int
    + capitalizeChoice(v: String, allowed: String[]): String
  }

  class ReportService {
    - choreRepository: ChoreInterface
    - householdRepository: HouseholdsInterface
    - reportWriter: ReportWriter
    - reportFormatter: ReportFormatter
    + ReportService(choreRepository: ChoreInterface, householdRepository: HouseholdsInterface, reportWriter: ReportWriter, formatter: ReportFormatter)
    + generateReport(userEmail: String, startDate: String, endDate: String): String
    + queryCompletedChores(userEmail: String, startDate: String, endDate: String): List<Chore>
    + filterChores(chores: List<Chore>, filter: ChoreFilter): List<Chore>
    + calculateStatistics(chores: List<Chore>): Map<String, Object>
    + validateDateRange(startDate: String, endDate: String): boolean
  }

  interface UserBaseInterface {
    + loadUsers(): Map<String, User>
    + saveUsers(users: Map<String, User>): void
    + findUserByEmail(email: String): User
    + addUser(user: User): void
    + updateUser(user: User): void
  }

  interface HouseholdsInterface {
    + loadHouseholds(): Map<String, Household>
    + saveHouseholds(households: Map<String, Household>): void
    + findHouseholdById(id: String): Household
    + findHouseholdByJoinCode(joinCode: String): Household
    + addHousehold(household: Household): void
    + updateHousehold(household: Household): void
  }

  interface ChoreInterface {
    + loadChores(): List<Chore>
    + saveChores(chores: List<Chore>): void
    + findChoreById(id: String): Chore
    + addChore(chore: Chore): void
    + updateChore(chore: Chore): void
    + deleteChore(choreId: String): void
  }

  interface ReportFormatter {
    + format(chores: List<Chore>, statistics: Map<String, Object>, startDate: String, endDate: String): String
  }

  class TextReportFormatter {
    + format(chores: List<Chore>, statistics: Map<String, Object>, startDate: String, endDate: String): String
  }

  class CsvReportFormatter {
    + format(chores: List<Chore>, statistics: Map<String, Object>, startDate: String, endDate: String): String
  }

  class ChoreReportEntry {
    - householdName: String
    - description: String
    - priority: String
    - type: String
    - assignedName: String
    - completed: boolean
    - completionDate: String
    + ChoreReportEntry(householdName: String, description: String, priority: String, type: String, assignedName: String, completed: boolean, completionDate: String)
  
  }

  class PriorityChoreFilter {
    - priority: String
    + PriorityChoreFilter(priority: String)
    + matches(chore: Chore): boolean
  }

  
  class MemberChoreFilter {
    - memberEmail: String
    + MemberChoreFilter(memberEmail: String)
    + matches(chore: Chore): boolean
  }

  class CompositeChoreFilter {
    - filters: List<ChoreFilter>
    - mode: String  ' "AND" or "OR"
    + CompositeChoreFilter(filters: List<ChoreFilter>, mode: String)
    + matches(chore: Chore): boolean
  }
}

ChoreFilter <|.. PriorityChoreFilter
ChoreFilter <|.. MemberChoreFilter
ChoreFilter <|.. CompositeChoreFilter

PriorityChoreFilter ..> Chore
MemberChoreFilter ..> Chore
CompositeChoreFilter ..> Chore
CompositeChoreFilter ..> ChoreFilter

ReportService ..> ChoreReportEntry
ReportFormatter ..> ChoreReportEntry
TextReportFormatter ..> ChoreReportEntry
CsvReportFormatter ..> ChoreReportEntry

package "datasource" {

  class UserDataSource {
    - filePath: String
    + UserDataSource(filePath: String)
    + loadUsers(): Map<String, User>
    + saveUsers(users: Map<String, User>): void
    + findUserByEmail(email: String): User
    + addUser(user: User): void
    + updateUser(user: User): void
  }

  class HouseholdDataSource {
    - filePath: String
    + HouseholdDataSource(filePath: String)
    + loadHouseholds(): Map<String, Household>
    + saveHouseholds(households: Map<String, Household>): void
    + findHouseholdById(id: String): Household
    + findHouseholdByJoinCode(joinCode: String): Household
    + addHousehold(household: Household): void
    + updateHousehold(household: Household): void
  }

  class ChoreDataSource {
    - filePath: String
    + ChoreDataSource(filePath: String)
    + loadChores(): List<Chore>
    + saveChores(chores: List<Chore>): void
    + findChoreById(id: String): Chore
    + addChore(chore: Chore): void
    + updateChore(chore: Chore): void
    + deleteChore(choreId: String): void
  }

  class ReportWriter {
    - reportsDirectory: String
    + ReportWriter(reportsDirectory: String)
    + writeToFile(filePath: String, content: String): void
    + generateFilePath(startDate: String, endDate: String): String
  }
}


WelcomeScreen ..> Application
WelcomeScreen ..> AuthenticationManager
MainScreen ..> Application
MainScreen ..> User
MainScreen ..> Household
HouseholdDashboard ..> Application
HouseholdDashboard ..> Household
HouseholdDashboard ..> User
HouseholdDashboard ..> Chore
ChoreForm ..> Application
ChoreForm ..> Chore
ChoreForm ..> ChoresAssignmentTemplate
ChoreForm ..> ManualAssignmentStrategy
ChoreForm ..> RandomAssignmentStrategy
HouseholdForm ..> Application
HouseholdForm ..> Household
ReportDialog ..> ReportService

Application ..> UserBaseInterface
Application ..> HouseholdsInterface
Application ..> ChoreInterface
Application ..> AuthenticationManager
Application ..> ReportService
Application ..> User
Application ..> Household
Application ..> Credentials
AuthenticationManager ..> UserBaseInterface
AuthenticationManager ..> User
AuthenticationManager ..> Credentials
Household --> Chore
Chore ..> ChoresAssignmentTemplate
ChoresAssignmentTemplate <|.. RandomAssignmentStrategy
ChoresAssignmentTemplate <|.. ManualAssignmentStrategy
ChoreFilter <|.. CompletedChoreFilter
ChoreFilter <|.. ActiveChoreFilter
ChoreFilter <|.. DateRangeChoreFilter
ChoreFilter ..> Chore
CompletedChoreFilter ..> Chore
ActiveChoreFilter ..> Chore
DateRangeChoreFilter ..> Chore
Household ..> ChoreFilter
ReportService ..> ChoreFilter
HouseholdDashboard ..> ChoreFilter
ReportService ..> ChoreInterface
ReportService ..> HouseholdsInterface
ReportService ..> Household
ReportService ..> Chore
ReportService ..> ReportWriter
ReportService ..> ReportFormatter
ReportFormatter <|.. TextReportFormatter
ReportFormatter <|.. CsvReportFormatter
ReportFormatter ..> Chore
TextReportFormatter ..> Chore
CsvReportFormatter ..> Chore

UserBaseInterface <|.. UserDataSource
HouseholdsInterface <|.. HouseholdDataSource
ChoreInterface <|.. ChoreDataSource
UserBaseInterface ..> User
HouseholdsInterface ..> Household
ChoreInterface ..> Chore
UserDataSource ..> User
HouseholdDataSource ..> Household
ChoreDataSource ..> Chore

@enduml
